--- a/_config.yml
+++ b/_config.yml
@@ -77,6 +77,7 @@ width: normal
 
 # if you don't need projects, comment the *projects* configs below
 projects: true
+links : true
 
 # if you don't need "about" or "blog", comment them out below
 about: true
