update links page

--- a/_config.yml
+++ b/_config.yml
@@ -90,7 +90,7 @@ read-time: false
 show-tags: true
 
 # related posts inside a post?
-related: true
+related: false
 
 # Display links for next and previous posts for the specified categories
 post-advance-links: [blog]
