--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ description: A blog about technology and stuff related
 
 # if it's an external image, update below for true
 # better with square images
-external-image: true
-picture: assets/images/profile.png
+external-image: false
+picture: /assets/images/profile.png
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
