--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # main text of home
 name: 한이정의 블로그입니다
-bio: 블로그 새단장 중 ■■□□□ 20%
+bio: 블로그 새단장 중 ■■□□□ 40%
 
 # twitter summary info
-description: A blog about technology and stuff related
+# description: A blog about technology and stuff related
 
 # if it's an external image, update below for true
 # better with square images
@@ -59,17 +59,11 @@ email: haniijeong827@gmail.com
 
 authors:
     johndoe:
-        name: John Doe
-        bio: A Man who travels the world eating noodles
+        name: I-Jeong Han
+        bio: Statistics | Machine Learning | Data analysis
         external-image: false
-        picture: assets/images/profile.jpg
-        twitter: johndoe
-    jamesfoster:
-        name: James Foster
-        bio: A Man who develops software with coffee
-        external-image: false
-        picture: assets/images/james.jpg
-        twitter: jamesfoster
+        picture: assets/images/profile.png
+        # twitter: johndoe
 
 # do you want a larger site? change the option below
 # options: [normal, large] | default: normal
